--- a/gpu-stats.html
+++ b/gpu-stats.html
@@ -273,6 +273,13 @@
             margin-bottom: 1rem;
             font-size: 0.875rem;
             color: var(--text-secondary);
+            justify-content: center;  /* Center the items */
+            text-align: center;      /* Center the text inside each item */
+        }
+        
+        .performance-indicators div {
+            min-width: 200px;        /* Give each item some minimum width */
+            padding: 0.25rem;        /* Add some padding */
         }
 
         table {
