add 3day max history from 24h

--- a/gpu-stats.html
+++ b/gpu-stats.html
@@ -428,6 +428,7 @@
         <button class="timeframe-btn" data-hours="6">6 Hours</button>
         <button class="timeframe-btn" data-hours="12">12 Hours</button>
         <button class="timeframe-btn" data-hours="24">24 Hours</button>
+        <button class="timeframe-btn" data-hours="72">3 Days</button>
     </div>
     <div class="performance-indicators">
         <div>Peak Temperature: <span id="peak-temp">--°C</span></div>
